Fix mobile overflow bug

--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -85,6 +85,12 @@ div#nav-menu {
   }
 }
 
+@media (max-width: 660px) {
+  div#main-pane {
+    width: 95%;
+  }
+}
+
 a#nav-dropdown-button {
   display: none;
 }
